raw-manifests/local-staging/network-debug-app/service-entry-1.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: networking-debug-app-service-entry-1-external
  namespace: istio-system
spec:
  hosts:
    - "nda1.management.local"
  location: MESH_EXTERNAL
  resolution: DNS
  addresses:
    - 172.17.0.51
  ports:
    - name: http
      number: 8081 # this is the istio ingress gateway port not the fucking app port 
      protocol: HTTP
    - name: https
      number: 44301 # this is the istio ingress gateway port not the fucking app port 
      protocol: HTTPS
